@@ -8,6 +8,7 @@ Version 0.2.2 [2005-xxx-xxx] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Fixed bug where 'htmltags' were not transferred to image mapping of polygon vertices
     * Fixed bug in SVG where pie slices with some specific angles curled the wrong way
     * Fixed bug in Image_Canvas_ImageMap::show() and Image_Canvas_ImageMap::save() calling non-existing method _toHtml()
+    * Fixed but in Image_Canvas_SVG::polygon() not showing polygon if last point was a spline - addSpline()
 
 Version 0.2.1 [2005-Aug-08] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added Request #4997 "HTML attributes and JS actions in imagemaps" - using 'htmltags' entry
